# shelf

./: .gitignore  .version  Makefile  Makefile.in  README  config.h  config.status  configure  configure.ac  libtool
autom4te.cache/: output.0  requests  traces.0  traces.1
data/: Makefile  Makefile.in  plank.desktop
data/apport/: Makefile  Makefile.in
data/icons/: Makefile  Makefile.in
data/themes/: Makefile  Makefile.in
docs/: Makefile  Makefile.in
lib/: AbstractMain.lo  CompositedWindow.lo  DockController.c  DockController.lo  DockController.vala  DockPositionManager.lo  DockRenderer.lo  DockWindow.lo  Factory.lo  ItemFactory.lo  Makefile  Makefile.am  Makefile.in  Tab.lo  TabManager.lo  TabRenderer.lo  build-abi  libshelf-internal.la  libshelf.la  shelf-internal.h  shelf-internal.vapi  shelf-resources.c  shelf-resources.lo  shelf.h  shelf.pc  shelf.vapi
lib/.deps/: AbstractMain.Plo  AnimatedRenderer.Plo  Color.Plo  CompositedWindow.Plo  DockController.Plo  DockPositionManager.Plo  DockPreferences.Plo  DockRenderer.Plo  DockSurface.Plo  DockTheme.Plo  DockWindow.Plo  DrawingService.Plo  Factory.Plo  HideManager.Plo  ItemFactory.Plo  Logger.Plo  Matcher.Plo  Paths.Plo  Preferences.Plo  Tab.Plo  TabManager.Plo  TabRenderer.Plo  Theme.Plo  shelf-resources.Plo
lib/.libs/: libshelf-internal.la  libshelf.exp  libshelf.la  libshelf.lai  libshelf.so.0  libshelf.so.0.0.0  libshelf.ver
lib/Drawing/: AnimatedRenderer.vala  Color.vala  DockRenderer.c  DockRenderer.vala  DockSurface.vala  DrawingService.vala  TabRenderer.c  TabRenderer.vala
lib/Factories/: AbstractMain.c  AbstractMain.vala  Factory.c  Factory.vala  ItemFactory.c  ItemFactory.vala
lib/Items/: Tab.c  Tab.vala  TabManager.c  TabManager.vala
lib/Services/: Matcher.vala
lib/System/: DockPositionManager.c  DockPositionManager.vala  DockPreferences.vala  DockTheme.vala  HideManager.vala  Logger.c  Logger.vala  Paths.vala  Preferences.vala  Theme.vala
lib/Widgets/: CompositedWindow.c  CompositedWindow.vala  DockWindow.c  DockWindow.vala
man/: Makefile  Makefile.in
po/: .intltool-merge-cache  Makefile  Makefile.in  ar.gmo  bg.gmo  bs.gmo  ca.gmo  cs.gmo  de.gmo  el.gmo  en_AU.gmo  en_CA.gmo  en_GB.gmo  eo.gmo  es.gmo  et.gmo  eu.gmo  fi.gmo  fr.gmo  gl.gmo  hr.gmo  hu.gmo  id.gmo  it.gmo  ml.gmo  nb.gmo  nl.gmo  pl.gmo  pt.gmo  pt_BR.gmo  ru.gmo  sk.gmo  sl.gmo  sma.gmo  sr.gmo  sr@latin.gmo  sv.gmo  tr.gmo  zh_CN.gmo  zh_TW.gmo
src/: Makefile  Makefile.am  Makefile.in  PlankMain.c  PlankMain.vala  shelf
src/.deps/: shelf-PlankMain.Po
src/.libs/: lt-shelf  shelf
tests/: Drawing.vala  Items.vala  Main.vala  Makefile  Makefile.in  Preferences.vala
vapi/: Makefile  Makefile.in
